--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.18.9",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "postcss-cli": "^10.0.0",
     "postcss-loader": "^7.0.1",
