Created a components directory. Change the images and styles in project cards.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
         "allowJs": true,
     },
     "include": [
-        "./src/*"
+        "src/*",
+        "src/components/*",
+        "src/types.d.ts"
     ]
 }
